--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   View Projects
 </a>
 
-  <a href="MukeshKumar_InternshalaResume.pdf" download class="btn secondary">
+  <a href="MukeshKumar_InternshalaResume" download class="btn secondary">
   Download Resume
 </a>
 
@@ -169,3 +169,4 @@ Designed RESTful APIs for data handling
 
     </body>
 </html>
+
