Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
       <div class="project-card">
         <h3>Todo List (MERN)</h3>
         <p>
-          Full-stack Todo application with CRUD operations, MongoDB Atlas,
-          REST APIs, and cloud deployment.
+          • Developed a full-stack Todo application using MongoDB, Express.js, React, and Node.js
+          • Implemented complete CRUD operations to add, update, delete, and manage todos efficiently
+          • Integrated MongoDB Atlas for secure, scalable cloud-based data storage
+• Implemented environment-based configuration using dotenv for sensitive credentials
+• Deployed the frontend on Vercel and backend on Render with proper build configuration
+• Configured CORS policies to ensure secure frontend–backend communication
+• Debugged production issues related to server sleep, caching, and API latency
+• Improved application stability by handling errors and optimizing API responses
+• Gained hands-on experience with real-world deployment, hosting, and production debugging
         </p>
         <span class="tech">React • Node • Express • MongoDB</span>
       </div>
@@ -196,3 +203,4 @@
     }
   }
 </script>
+
