Fix HTML structure and update project details

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="projects-container">
 
       <div class="project-card">
-        <h3>Todo List (MERN)</h3>
+        <h3>Todo Overview Dashboard</h3>
         <p>
           • Implemented complete CRUD operations to add, update, delete, and manage todos efficiently
           • Integrated MongoDB Atlas for secure, scalable cloud-based data storage
@@ -84,25 +84,52 @@
           • Improved application stability by handling errors and optimizing API responses
           • Gained hands-on experience with real-world deployment, hosting, and production debugging
         </p>
-        <span class="tech">React • Node • Express • MongoDB</span>
+        <span class="tech">React • Node • Express • MongoDB Atlas • Versel • Render •Bootstrap</span>
       </div>
 
       <div class="project-card">
         <h3>Eventify</h3>
         <p>
-          Event management system with RSVP tracking and role-based access.
+          • Designed and developed a full-stack event booking and management system using the MERN
+stack
+• Implemented JWT-based authentication to ensure secure user access and role-based
+operations
+• Built features for event creation, event management, concert booking, and member attendance
+tracking
+• Developed RESTful APIs using Node.js and Express.js for backend services
+• Used Axios for seamless REST API communication between the React frontend and Node.js
+backend
+• Integrated MongoDB with Mongoose for efficient data modeling and database operations
+• Implemented protected routes and middleware to secure APIs and restrict unauthorized access
         </p>
-        <span class="tech">React • Node • JWT</span>
+        <span class="tech">React • Node • Express • MongoDB Atlas • Versel • Render •Bootstrap • JWT • Axion</span>
       </div>
 
       <div class="project-card">
         <h3>Bus Reservation (Java)</h3>
         <p>
-          Console-based application for booking, viewing, and cancelling tickets.
+          • Designed and developed a console-based Bus Reservation System using Java with OOPS
+principles
+• Implemented separate modules for booking, seat reservation, and ticket cancellation
+• Supported AC and Non-AC buses with multiple routes and dynamic passenger count
+management
+• Utilized Java Collections such as ArrayList for efficient storage and real-time management of
+seats and passenger data
+• Applied object-oriented concepts including classes, objects, encapsulation, and abstraction
+• Improved system reliability by validating seat availability and preventing duplicate bookings
         </p>
-        <span class="tech">Java • OOP • MySQL</span>
+        <span class="tech">Java • OOPS • MySQL</span>
       </div>
-
+       <div class="project-card">
+        <h3>Portfolio</h3>
+         <p>
+           • Designed and developed a personal portfolio website using HTML, CSS, and JavaScript
+• Implemented responsive design to ensure compatibility across desktop and mobile devices
+• Added interactive features using JavaScript to enhance user experience and navigation
+• Structured the layout to effectively showcase projects, technical skills, and contact information
+• Focused on clean UI/UX design and performance optimization
+     </p>
+          <span class="tech">HTML • CSS • Javascript</span>
     </div>
   </section>
   <hr>
@@ -202,5 +229,6 @@
     }
   }
 </script>
+
 
 
