Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
   <section id="skills" class="section">
     <h2>Skills</h2>
     <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>React, Node.js, Express</li>
-      <li>MongoDB, MySQL</li>
-      <li>Java, OOP, DSA</li>
-      <li>Git & GitHub</li>
+      <li>• Languages: Java, JavaScript</li>
+      <li>• Frontend: React, Bootstrap, Axios, HTML5,CSS</li>
+      <li>• Backend: Node.js, Express.js, REST API,JWT</li>
+      <li>• Database: MongoDB, Mongoose, MySQL</li>
+      <li>• Tools: Git, GitHub, Postman, Vercel, Render</li>
     </ul>
   </section>
 
@@ -229,6 +229,7 @@ seats and passenger data
     }
   }
 </script>
+
 
 
 
