--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
     <div class="projects-container">
 
       <div class="project-card">
-        <h3>Todo Overview Dashboard</h3>
+        <h3>
+  <a href="https://todo-frontend-chi-seven.vercel.app/" style="color: blue;">
+    Todo Overview Dashboard
+  </a>
+</h3>
         <p>
           • Implemented complete CRUD operations to add, update, delete, and manage todos efficiently
           • Integrated MongoDB Atlas for secure, scalable cloud-based data storage
@@ -121,7 +125,11 @@ seats and passenger data
         <span class="tech">Java • OOPS • MySQL</span>
       </div>
        <div class="project-card">
-        <h3>Portfolio</h3>
+         <h3>
+  <a href="https://mukeshkumar-coder33.github.io/Portfolio/ style="color: blue;">
+    Todo Overview Dashboard
+  </a>
+</h3>
          <p>
            • Designed and developed a personal portfolio website using HTML, CSS, and JavaScript
 • Implemented responsive design to ensure compatibility across desktop and mobile devices
@@ -229,6 +237,7 @@ seats and passenger data
     }
   }
 </script>
+
 
 
 
