Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ seats and passenger data
        <div class="project-card">
          <h3>
   <a href="https://mukeshkumar-coder33.github.io/Portfolio/ style="color: blue;">
-    Todo Overview Dashboard
+    Portfolio
   </a>
 </h3>
          <p>
@@ -237,6 +237,7 @@ seats and passenger data
     }
   }
 </script>
+
 
 
 
