Integrate Razerpay for payment processing in Eventify
Added Razerpay payment gateway integration to Eventify project.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,26 @@
     <h2>Projects</h2>
 
     <div class="projects-container">
-
       <div class="project-card">
+        <h3>Eventify</h3>
+        <p>
+          • Designed and developed a full-stack event booking and management system using the MERN
+stack
+• Implemented JWT-based authentication to ensure secure user access and role-based
+operations
+• Built features for event creation, event management, concert booking, and member attendance
+tracking
+• Developed RESTful APIs using Node.js and Express.js for backend services
+• Used Axios for seamless REST API communication between the React frontend and Node.js
+backend
+• Integrated MongoDB with Mongoose for efficient data modeling and database operations
+• Implemented protected routes and middleware to secure APIs and restrict unauthorized access
+• Implemented razerpay for payment using payment gateway with API. 
+        </p>
+        <span class="tech">React • Node • Express • MongoDB Atlas • Versel • Render •Bootstrap • JWT • Axion • Razerpay</span>
+      </div>
+
+       <div class="project-card">
         <h3>
   <a href="https://todo-frontend-chi-seven.vercel.app/" style="color: blue;">
     Todo Overview Dashboard
@@ -89,24 +107,6 @@
           • Gained hands-on experience with real-world deployment, hosting, and production debugging
         </p>
         <span class="tech">React • Node • Express • MongoDB Atlas • Versel • Render •Bootstrap</span>
-      </div>
-
-      <div class="project-card">
-        <h3>Eventify</h3>
-        <p>
-          • Designed and developed a full-stack event booking and management system using the MERN
-stack
-• Implemented JWT-based authentication to ensure secure user access and role-based
-operations
-• Built features for event creation, event management, concert booking, and member attendance
-tracking
-• Developed RESTful APIs using Node.js and Express.js for backend services
-• Used Axios for seamless REST API communication between the React frontend and Node.js
-backend
-• Integrated MongoDB with Mongoose for efficient data modeling and database operations
-• Implemented protected routes and middleware to secure APIs and restrict unauthorized access
-        </p>
-        <span class="tech">React • Node • Express • MongoDB Atlas • Versel • Render •Bootstrap • JWT • Axion</span>
       </div>
 
       <div class="project-card">
@@ -237,6 +237,7 @@ seats and passenger data
     }
   }
 </script>
+
 
 
 
