Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 
     <div class="projects-container">
       <div class="project-card">
-        <h3>Eventify</h3>
+        <h3>
+          <a href="https://eventify-frontend-eight.vercel.app/" style="color: blue;">
+          Eventify
+          </a>
+        </h3>
         <p>
           • Designed and developed a full-stack event booking and management system using the MERN
 stack
@@ -237,6 +241,7 @@ seats and passenger data
     }
   }
 </script>
+
 
 
 
